syntax = "proto3";

option csharp_namespace = "DatabaseApp.AppCommunication.Grpc";

message GetAvailableGroupsReply {
  map<int32, string> idGroupsMap = 1;
}

message SetGroupRequest {
  int64 userId = 1;
  string groupName = 2;
  string fullName = 3;
}

message SetGroupReply {
  string groupName = 1;
  string fullName = 2;
  bool isFailed = 3;
  string errorMessage = 4;
}

message SetAvailableGroupsRequest {
  repeated string groupNames = 1;
}